--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
